Ported some optimizations from ArchiKernel
Change-Id: Ie2bfa5d6b8797e75e1c668c72c57a909fddb1a41

--- a/arch/arm/configs/cyanogenmod_i9305_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9305_defconfig
@@ -33,6 +33,70 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
 
 #
+# Target options
+#
+CONFIG_ARCHIKERNEL_TARGET_RELEASE_PRODUCTION=y
+# CONFIG_ARCHIKERNEL_TARGET_RELEASE_DEBUG is not set
+CONFIG_ARCHIKERNEL_TARGET_SYSTEM_AOSP=y
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_SAMSUNG is not set
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_ARCH_ARMV7VE is not set
+CONFIG_ARCHIKERNEL_TARGET_ARCH_ARMV7A=y
+# CONFIG_ARCHIKERNEL_TARGET_ARCH_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA15 is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA9=y
+# CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA7 is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_SOFT is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_SOFTFP=y
+# CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_HARD is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_NEONVFP4 is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_VFP4 is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_NEON=y
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_VFPV3 is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_UNKNOWN is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_CORES=4
+
+CONFIG_ARCHIKERNEL_OPTI_O3=y
+
+#
+# Optimizations
+#
+CONFIG_ARCHIKERNEL_OPTI_L1_LINE_SIZE=32
+CONFIG_ARCHIKERNEL_OPTI_L1_SIZE=32
+CONFIG_ARCHIKERNEL_OPTI_L2_SIZE=1024
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_LINKER_GOLD is not set
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_LINKER_BFD is not set
+CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_LINKER_DEFAULT=y
+CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_OPTI=y
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_GC is not set
+CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_SORT=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_IDENTITY=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_BLOCK=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_INTERCHANGE=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_NEST=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_STRIP=y
+# CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_PARALLELIZE is not set
+CONFIG_ARCHIKERNEL_OPTI_DNDEBUG=y
+# CONFIG_ARCHIKERNEL_OPTI_FLTO is not set
+CONFIG_ARCHIKERNEL_OPTI_FSECTION_ANCHORS=y
+CONFIG_ARCHIKERNEL_OPTI_FUNSAFE_LOOP_OPTIMIZATIONS=y
+CONFIG_ARCHIKERNEL_OPTI_FIVOPTS=y
+CONFIG_ARCHIKERNEL_OPTI_FTREE_LOOP_IM=y
+CONFIG_ARCHIKERNEL_OPTI_FTREE_LOOP_IVCANON=y
+CONFIG_ARCHIKERNEL_OPTI_FUNSWITCH_LOOPS=y
+CONFIG_ARCHIKERNEL_OPTI_FRENAME_REGISTERS=y
+CONFIG_ARCHIKERNEL_OPTI_FGCSE_SM=y
+CONFIG_ARCHIKERNEL_OPTI_FGCSE_LAS=y
+CONFIG_ARCHIKERNEL_OPTI_FWEB=y
+CONFIG_ARCHIKERNEL_OPTI_FTRACER=y
+CONFIG_ARCHIKERNEL_OPTI_FIPA_PTA=y
+CONFIG_ARCHIKERNEL_OPTI_FMODULO_SCHED=y
+CONFIG_ARCHIKERNEL_OPTI_FMODULO_SCHED_ALLOW_REGMOVES=y
+
+#
 # General setup
 #
 CONFIG_EXPERIMENTAL=y
